2. Trainning and Classification/nohup.out
  File "/home/nfatahelra/Study1_Code/2. Trainning and Classification/1. supervised_estimators_train.py", line 594
    %%time
    ^
SyntaxError: invalid syntax
